--- a/FunVis.cabal
+++ b/FunVis.cabal
@@ -72,6 +72,7 @@ executable FunVis
                     , text
                     , containers
                     , optparse-applicative
+                    , bytestring
 
     -- Directories containing source files.
     hs-source-dirs:   app
