--- a/FunVis.cabal
+++ b/FunVis.cabal
@@ -61,7 +61,7 @@ executable FunVis
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    ExprParser
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -74,6 +74,8 @@ executable FunVis
                     , optparse-applicative
                     , bytestring
                     , filepath
+                    , megaparsec
+                    , parser-combinators
 
     -- Directories containing source files.
     hs-source-dirs:   app
