--- a/FunVis.cabal
+++ b/FunVis.cabal
@@ -20,7 +20,7 @@ name:               FunVis
 -- PVP summary:     +-+------- breaking API changes
 --                  | | +----- non-breaking API additions
 --                  | | | +--- code changes with no API change
-version:            0.4.0.0
+version:            0.5.0.0
 
 -- A short (one-line) description of the package.
 -- synopsis:
@@ -76,12 +76,15 @@ executable FunVis
                     , filepath
                     , megaparsec
                     , parser-combinators
-                    , JuicyPixels
                     , vector
                     , time
+                    , massiv
+                    , massiv-io
+                    , Color
 
     -- Directories containing source files.
     hs-source-dirs:   app
 
     -- Base language which the package is written in.
     default-language: GHC2021
+    ghc-options: -threaded -with-rtsopts=-N
