--- a/FunVis.cabal
+++ b/FunVis.cabal
@@ -62,6 +62,9 @@ executable FunVis
 
     -- Modules included in this executable, other than Main.
     other-modules:    ExprParser
+                    , Dis
+                    , Performer
+                    , Types
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -81,6 +84,9 @@ executable FunVis
                     , massiv
                     , massiv-io
                     , Color
+                    , discord-haskell
+                    , req >= 3.13.4
+                    , dotenv
 
     -- Directories containing source files.
     hs-source-dirs:   app
